<resources>
    <string name="app_name">LogEasy</string>
    <string name="title_home">Início</string>
    <string name="title_search">Procurar</string>
    <string name="title_task">Tarefas</string>
    <string name="title_empresa">Empresa</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_activity_maps">Map</string>

    <string name="editar_login">Editar login</string>
    <string name="add_admin">Adicionar administrador</string>
    <string name="personalizacao">Personalização</string>
    <string name="noite">Noite</string>
    <string name="sair">Sair </string>

    <string name="solicitou_nova_entrega">solicitou nova entrega</string>
    <string name="recebeu_entrega">recebeu entrega</string>
    <string name="saiu_para_entrega"> saiu para entrega</string>
    <string name="teve_carga_saqueada">teve carga saqueada</string>
    <string name="concluiu_entrega">concluiu entrega</string>
    <string name="adicionou_nova_entrega">adicionou uma nova entrega para você</string>
    <string name="enviando_pedido">já está enviando o seu pedido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Entrar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha (Opcional)</string>
    <string name="action_sign_in">Entrar ou Registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">E-mail inválido</string>
    <string name="error_invalid_password">Senha curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"O aplicativo precisa da permissão para fornecer dicas de e-mail."
    </string>

    <!-- Pesquisa -->
    <string name="pesquisar">Pesquisar</string>
    <string name="sem_resultados">Não há resultados</string>
    <string name="agregados">Agregados</string>
    <string name="clientes">Clientes</string>
    <string name="caminhoneiros">Caminhoneiros</string>
    <string name="caminhoes">Caminhões</string>
    <string name="filtrar">Filtrar</string>

    <!-- Perfil -->
    <string name="editar_perfil">Editar Perfil</string>
    <string name="CPF_CNPJ">CPF/CNPJ</string>
    <string name="endereco">Endereço</string>
    <string name="numero">Número</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="logradouro">Logradouro</string>
    <string name="complemento">Complemento</string>
    <string name="CEP">CEP</string>
    <string name="descricao">Descrição</string>
    <string name="permissoes">Atribuir Permissões</string>
    <string name="atribuir_carro">Atribuir Carro</string>
    <string name="title_activity_maps2">Map</string>
    <string name="nome">Nome</string>
    <string name="usuario">Usuário</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>


    <!-- Tarefas -->
    <string name="notificacao">Notificação</string>
    <string name="pendente">Pendente</string>
    <string name="historico">Histórico</string>
    <string name="sem_tarefas">Não há tarefas</string>
    <string name="requerente">Requerente</string>
    <string name="requisitado">Requisitado</string>

    <!--Carro-->
    <string name="sem_caminhoneiro">Não há caminhoneiros</string>
    <string name="marca">Marca</string>
    <string name="modelo">Modelo</string>
    <string name="cor">Cor</string>
    <string name="placa">Placa</string>
    <string name="vin">VIN</string>
    <string name="ano">Ano</string>
    <string name="alterar">Alterar</string>

    <!-- Empresa -->
    <string name="cnpj">CNPJ</string>
    <string name="estado">Estado</string>


    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="adicionar">Adicionar</string>
    <string name="vazio">Vazio</string>


    <string name="sobre">Sobre</string>


    <string name="google_maps_key">AIzaSyDFEEhEXtvfXVwQZUT6YlaDlSYIMX8X5kw </string>

    <string name="problema_conexao_novamente">Problema de Conexão, tente novamente</string>
    <string name="tentar_novamente">Tentar novamente</string>
    <string name="alerta">Alerta</string>
    <string name="algo_inesperado">Algo inesperado aconteceu</string>

    <!--https://github.com/onmyway133/fantastic-android-animation/blob/master/Animation/button.md
    https://github.com/varunest/SparkButton
    https://github.com/KeepSafe/TapTargetView
    https://github.com/sjwall/MaterialTapTargetPrompt
    https://github.com/JorgeCastilloPrz/FABProgressCircle
    https://github.com/kongnanlive/SearchMenuAnim
    https://github.com/StevenDXC/DxLoadingButton
    https://github.com/frogermcs/LikeAnimation-->


</resources>
